RESOLVED FIXED43767
[EFL]REGRESSION(65021) need to fix build break
https://bugs.webkit.org/show_bug.cgi?id=43767
Summary [EFL]REGRESSION(65021) need to fix build break
Ryuan Choi
Reported 2010-08-09 20:56:38 PDT
we need to fix build break
Attachments
Patch (3.61 KB, patch)
2010-08-09 21:02 PDT, Ryuan Choi
no flags
Patch (3.60 KB, patch)
2010-08-09 23:38 PDT, Ryuan Choi
no flags
Patch (3.60 KB, patch)
2010-08-09 23:45 PDT, Ryuan Choi
no flags
Patch (3.60 KB, patch)
2010-08-10 19:44 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2010-08-09 21:02:23 PDT
WebKit Commit Bot
Comment 2 2010-08-09 22:31:56 PDT
Comment on attachment 63973 [details] Patch Rejecting patch 63973 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--reviewer', u'Gavin Barraclough', u'--force']" exit_code: 1 Parsed 3 diffs from patch file(s). patching file WebKit/efl/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit/efl/ewk/ewk_frame.cpp Hunk #1 FAILED at 1946. 1 out of 1 hunk FAILED -- saving rejects to file WebKit/efl/ewk/ewk_frame.cpp.rej patching file WebKit/efl/ewk/ewk_view.cpp Hunk #2 succeeded at 1350 with fuzz 2. Hunk #3 FAILED at 2528. 1 out of 3 hunks FAILED -- saving rejects to file WebKit/efl/ewk/ewk_view.cpp.rej Full output: http://queues.webkit.org/results/3714011
Ryuan Choi
Comment 3 2010-08-09 23:38:13 PDT
Ryuan Choi
Comment 4 2010-08-09 23:45:21 PDT
Eric Seidel (no email)
Comment 5 2010-08-09 23:57:35 PDT
Comment on attachment 63978 [details] Patch WebKit/efl/ewk/ewk_frame.cpp:1949 + WTF::PassRefPtr<WebCore::Widget> ewk_frame_plugin_create(Evas_Object* o, const WebCore::IntSize& pluginSize, WebCore::HTMLPlugInElement* element, const WebCore::KURL& url, const WTF::Vector<WTF::String>& paramNames, const WTF::Vector<WTF::String>& paramValues, const WTF::String& mimeType, bool loadManually) We generally use WebCore::String instead of WTF::String directly. I guess it doesn't matter much.
Ryuan Choi
Comment 6 2010-08-10 00:33:40 PDT
(In reply to comment #5) > (From update of attachment 63978 [details]) > WebKit/efl/ewk/ewk_frame.cpp:1949 > + WTF::PassRefPtr<WebCore::Widget> ewk_frame_plugin_create(Evas_Object* o, const WebCore::IntSize& pluginSize, WebCore::HTMLPlugInElement* element, const WebCore::KURL& url, const WTF::Vector<WTF::String>& paramNames, const WTF::Vector<WTF::String>& paramValues, const WTF::String& mimeType, bool loadManually) > We generally use WebCore::String instead of WTF::String directly. I guess it doesn't matter much. I believe r65021 changes WebCore::String. below is a part of r65021 Index: WebKit/efl/ewk/ewk_settings.cpp =================================================================== --- WebKit/efl/ewk/ewk_settings.cpp (revision 65020) +++ WebKit/efl/ewk/ewk_settings.cpp (working copy) @@ -67,7 +67,7 @@ uint64_t ewk_settings_web_database_defau void ewk_settings_web_database_path_set(const char *path) { #if ENABLE(DATABASE) - WebCore::String corePath = WebCore::String::fromUTF8(path); + WTF::String corePath = WTF::String::fromUTF8(path); WebCore::DatabaseTracker::tracker().setDatabaseDirectoryPath(corePath); #endif }
WebKit Commit Bot
Comment 7 2010-08-10 07:36:53 PDT
Comment on attachment 63978 [details] Patch Rejecting patch 63978 from commit-queue. Failed to run "[u'/Users/eseidel/Projects/CommitQueue/WebKitTools/Scripts/svn-apply', u'--force']" exit_code: 1 Parsed 3 diffs from patch file(s). patching file WebKit/efl/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file WebKit/efl/ewk/ewk_frame.cpp Hunk #1 FAILED at 1946. 1 out of 1 hunk FAILED -- saving rejects to file WebKit/efl/ewk/ewk_frame.cpp.rej patching file WebKit/efl/ewk/ewk_view.cpp Hunk #2 succeeded at 1350 with fuzz 2. Hunk #3 FAILED at 2528. 1 out of 3 hunks FAILED -- saving rejects to file WebKit/efl/ewk/ewk_view.cpp.rej Full output: http://queues.webkit.org/results/3771023
Gyuyoung Kim
Comment 8 2010-08-10 18:34:25 PDT
Hello Ryuan, Please use "check-webkit-style" script before uploading your patch. The script is located in WebKitTools/Scripts. You should test your patch using the script before uploading your patch.
Eric Seidel (no email)
Comment 9 2010-08-10 18:36:50 PDT
webkit-patch upload also runs check-webkit-style for you when uploading a patch. :)
Ryuan Choi
Comment 10 2010-08-10 18:51:11 PDT
(In reply to comment #8) > Hello Ryuan, > > Please use "check-webkit-style" script before uploading your patch. > The script is located in WebKitTools/Scripts. > > You should test your patch using the script before uploading your patch. I use webkit-patch which include check-webkit-style. so I checked that script. I don't know why It was failed :(
Ryuan Choi
Comment 11 2010-08-10 18:54:04 PDT
(In reply to comment #9) > webkit-patch upload also runs check-webkit-style for you when uploading a patch. :) hello eric, what do I need to know for this patch to land? I can't know why it was failed. It was no problem in my environment although getting latest.
Eric Seidel (no email)
Comment 12 2010-08-10 19:02:44 PDT
It failed because it failed to apply. I think you need to upload a new patch which applies to top of tree.
Ryuan Choi
Comment 13 2010-08-10 19:28:18 PDT
(In reply to comment #12) > It failed because it failed to apply. I think you need to upload a new patch which applies to top of tree. Ok, I'll create patch from scratch after getting latest.
Ryuan Choi
Comment 14 2010-08-10 19:44:09 PDT
WebKit Commit Bot
Comment 15 2010-08-10 22:02:23 PDT
Comment on attachment 64067 [details] Patch Clearing flags on attachment: 64067 Committed r65122: <http://trac.webkit.org/changeset/65122>
WebKit Commit Bot
Comment 16 2010-08-10 22:02:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.