2010-08-10  Ryuan Choi  <ryuan.choi@samsung.com>

Unreviewed build fix.

        [EFL]REGRESSION(65021) need to fix build break
        https://bugs.webkit.org/show_bug.cgi?id=43767

        Remove AtomicStringWTF and change namespace TextCaseInsensitive.

        * ewk/ewk_frame.cpp:
        (ewk_frame_plugin_create):
        * ewk/ewk_view.cpp:
        (ewk_view_text_search):
        (ewk_view_text_matches_mark):
        (ewk_view_setting_font_cursive_set):

Canonical link: https://commits.webkit.org/55924@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65122 268f45cc-cd09-0410-ab3c-d52691b4dbfc